# src/instructor/application/dto/request/sign-in-instructor-with-gmail.request.dto.type.ts
@@ -1,0 +1,10 @@
+
+
+interface SignInInstructorWithGmailRequestDTO {
+	authCode: string;
+	redirectUri: string;
+}
+
+export {
+	SignInInstructorWithGmailRequestDTO
+};
